# vimway

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  meson.build
include/: vimway.h
src/: Makefile  main.c  test-comp.c  vimway.c
